src/App.css
/* ... */
.card-bg-gradient{
  background: linear-gradient(180.19deg, rgba(255, 255, 255, 0.072) -7.47%, rgba(255, 255, 255, 0) 104.33%);
  position: absolute;
  top: 50px;
  right: 60px;
  z-index: 0;
  height: 100%;
  border-radius: 30px;
}

.product-menu{
  font-family: 'Roboto', sans-serif;
  margin-bottom: 0.25rem;
  display: flex;
  cursor: pointer;
  align-items: center;
  border-radius: 0.75rem;
  padding-top: 0.75rem;
  padding-bottom: 0.75rem;
  padding-left: 1rem;
  padding-right: 1rem;
  font-size: 20px;
  font-weight: 400;
  --tw-text-opacity: 1;
  color: rgb(255 255 255 / var(--tw-text-opacity));
}

.product-menu:hover{
  background: linear-gradient(184.66deg, #CF74FF -59.72%, #1B59ED 212.35%);
}

.about-card-btn {
  border-radius: 0.75rem;
  border-width: 1px;
  font-weight: 600;
  --tw-text-opacity: 1;
  color: rgb(255 255 255 / var(--tw-text-opacity));
  transition-duration: 300ms;
}

.about-card-btn:hover {
  --tw-bg-opacity: 1;
  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
  --tw-text-opacity: 1;
  color: rgb(0 0 0 / var(--tw-text-opacity));
}

@media (min-width: 992px) {
  .lg_btn {
    padding-left: 2rem;
    padding-right: 2rem;
    padding-top: 1rem;
    padding-bottom: 1rem;
  }
}

.footer-icon {
  margin-right: 1rem;
  cursor: pointer;
  font-size: 20px;
  --tw-text-opacity: 1;
  color: rgb(255 255 255 / var(--tw-text-opacity));
}

.invisible {
  visibility: hidden;
}

.fixed {
  position: fixed;
}

.absolute {
  position: absolute;
}

.relative {
  position: relative;
}

.top-5 {
  top: 1.25rem;
}

.left-4 {
  left: 1rem;
}

.top-11 {
  top: 2.75rem;
}

.right-9 {
  right: 2.25rem;
}

.bottom-11 {
  bottom: 2.75rem;
}

.right-2 {
  right: 0.5rem;
}

.top-4 {
  top: 1rem;
}

.bottom-2 {
  bottom: 0.5rem;
}

.top-0 {
  top: 0px;
}

.z-\[999999\] {
  z-index: 999999;
}

.z-\[-1\] {
  z-index: -1;
}

.-z-0 {
  z-index: 0;
}

.z-10 {
  z-index: 10;
}

.z-20 {
  z-index: 20;
}

.z-0 {
  z-index: 0;
}

.z-\[5\] {
  z-index: 5;
}

.col-span-2 {
  grid-column: span 2 / span 2;
}

.col-span-1 {
  grid-column: span 1 / span 1;
}

.col-start-1 {
  grid-column-start: 1;
}

.row-span-6 {
  grid-row: span 6 / span 6;
}

.row-start-1 {
  grid-row-start: 1;
}

.float-right {
  float: right;
}

.float-left {
  float: left;
}

.mx-auto {
  margin-left: auto;
  margin-right: auto;
}

.my-2 {
  margin-top: 0.5rem;
  margin-bottom: 0.5rem;
}

.mx-10 {
  margin-left: 2.5rem;
  margin-right: 2.5rem;
}

.my-9 {
  margin-top: 2.25rem;
  margin-bottom: 2.25rem;
}

.my-10 {
  margin-top: 2.5rem;
  margin-bottom: 2.5rem;
}

.my-12 {
  margin-top: 3rem;
  margin-bottom: 3rem;
}

.mt-16 {
  margin-top: 4rem;
}

.mt-\[-40px\] {
  margin-top: -40px;
}

.mr-2 {
  margin-right: 0.5rem;
}

.mt-\[50px\] {
  margin-top: 50px;
}

.mt-\[-50px\] {
  margin-top: -50px;
}

.mb-5 {
  margin-bottom: 1.25rem;
}

.mr-10 {
  margin-right: 2.5rem;
}

.ml-4 {
  margin-left: 1rem;
}

.mr-7 {
  margin-right: 1.75rem;
}

.mb-4 {
  margin-bottom: 1rem;
}

.mb-2 {
  margin-bottom: 0.5rem;
}

.mt-3 {
  margin-top: 0.75rem;
}

.mb-6 {
  margin-bottom: 1.5rem;
}

.mt-\[30px\] {
  margin-top: 30px;
}

.mb-3 {
  margin-bottom: 0.75rem;
}

.mt-6 {
  margin-top: 1.5rem;
}

.mr-5 {
  margin-right: 1.25rem;
}

.mt-4 {
  margin-top: 1rem;
}

.mt-1 {
  margin-top: 0.25rem;
}

.mt-5 {
  margin-top: 1.25rem;
}

.ml-\[-10px\] {
  margin-left: -10px;
}

.ml-2 {
  margin-left: 0.5rem;
}

.mt-\[-6px\] {
  margin-top: -6px;
}

.mb-10 {
  margin-bottom: 2.5rem;
}

.mt-10 {
  margin-top: 2.5rem;
}

.ml-1 {
  margin-left: 0.25rem;
}

.mr-0 {
  margin-right: 0px;
}

.mr-9 {
  margin-right: 2.25rem;
}

.mt-\[6px\] {
  margin-top: 6px;
}

.ml-\[100px\] {
  margin-left: 100px;
}

.ml-10 {
  margin-left: 2.5rem;
}

.ml-14 {
  margin-left: 3.5rem;
}

.mt-12 {
  margin-top: 3rem;
}

.mt-11 {
  margin-top: 2.75rem;
}

.mb-8 {
  margin-bottom: 2rem;
}

.mb-\[30px\] {
  margin-bottom: 30px;
}

.mb-7 {
  margin-bottom: 1.75rem;
}

.mb-14 {
  margin-bottom: 3.5rem;
}

.mt-7 {
  margin-top: 1.75rem;
}

.ml-6 {
  margin-left: 1.5rem;
}

.mt-\[54px\] {
  margin-top: 54px;
}

.ml-20 {
  margin-left: 5rem;
}

.mt-\[100px\] {
  margin-top: 100px;
}

.mb-\[17px\] {
  margin-bottom: 17px;
}

.mt-\[-20px\] {
  margin-top: -20px;
}

.mb-1 {
  margin-bottom: 0.25rem;
}

.mt-\[-180px\] {
  margin-top: -180px;
}

.ml-5 {
  margin-left: 1.25rem;
}

.mt-\[-83px\] {
  margin-top: -83px;
}

.ml-\[64px\] {
  margin-left: 64px;
}

.block {
  display: block;
}

.inline-block {
  display: inline-block;
}

.flex {
  display: flex;
}

.table-cell {
  display: table-cell;
}

.grid {
  display: grid;
}

.hidden {
  display: none;
}

.h-full {
  height: 100%;
}

.h-\[50px\] {
  height: 50px;
}

.h-10 {
  height: 2.5rem;
}

.h-\[166px\] {
  height: 166px;
}

.h-6 {
  height: 1.5rem;
}

.h-\[430px\] {
  height: 430px;
}

.h-\[110px\] {
  height: 110px;
}

.h-\[67px\] {
  height: 67px;
}

.min-h-screen {
  min-height: 100vh;
}

.w-full {
  width: 100%;
}

.w-\[900px\] {
  width: 900px;
}

.w-\[50px\] {
  width: 50px;
}

.w-10 {
  width: 2.5rem;
}

.w-fit {
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.w-\[300px\] {
  width: 300px;
}

.w-10\/12 {
  width: 83.333333%;
}

.w-6\/12 {
  width: 50%;
}

.w-5\/12 {
  width: 41.666667%;
}

.w-7\/12 {
  width: 58.333333%;
}

.w-20 {
  width: 5rem;
}

.w-\[570px\] {
  width: 570px;
}

.w-\[160px\] {
  width: 160px;
}

.w-6 {
  width: 1.5rem;
}

.w-\[460px\] {
  width: 460px;
}

.w-\[70px\] {
  width: 70px;
}

.cursor-pointer {
  cursor: pointer;
}

.resize-none {
  resize: none;
}

.list-none {
  list-style-type: none;
}

.grid-flow-row {
  grid-auto-flow: row;
}

.grid-cols-2 {
  grid-template-columns: repeat(2, minmax(0, 1fr));
}

.grid-cols-3 {
  grid-template-columns: repeat(3, minmax(0, 1fr));
}

.grid-cols-4 {
  grid-template-columns: repeat(4, minmax(0, 1fr));
}

.items-start {
  align-items: flex-start;
}

.items-end {
  align-items: flex-end;
}

.items-center {
  align-items: center;
}
/* ... */

